Fix bug where footer would overlap choices.

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,9 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 header {
@@ -123,14 +126,13 @@ header h2 {
 }
 
 footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
   height: 60px; /* Height of the footer */
   background: white;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: auto;
 }
 
 a {
